# Server

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: branch_name_check.yaml  pre_commit_check.yaml  python_tests.yaml  server_tests.yaml
config/cities/: krakow.json
prototypes/: overpass_query_test.pkl
prototypes/tram_stop_mapping/: krakow_server_config.json  tram_stop_mapping.ipynb
server/: dev-requirements.txt  requirements.txt
server/src/: server.py
server/tests/: conftest.py  constants.py  test_server.py
src/: city_data_cache.py  server.py  validators.py
src/city_data_builder/: __init__.py  city_configuration.py  city_data_builder.py  model.py  weekday_enum.py
src/city_data_cache/: __init__.py  city_data_cache.py  model.py
src/overpass_client/: __init__.py  overpass_client.py
src/tram_stop_mapper/: __init__.py  exceptions.py  gtfs_package.py  tram_stop_mapper.py  tram_stop_mapping_errors.py  weekday.py  weekday_date_resolver.py
src/tram_track_graph_transformer/: exceptions.py  node.py  node_type.py  tram_track_graph_inspector.py  tram_track_graph_transformer.py
tests/: conftest.py  expected_tram_stop_mapping.json  test_city_cache_data.py  test_server.py
tests/_utils/: add_frozen_data_test_case.py  overpass_test_client.py  util_overpass_client.py
tests/assets/: krakow_city_configuration.json  krakow_ignored_crossings_and_stops.json
tests/city_data_builder/: test_city_configuration.py  (+1 more)
(+71 files in other folders)
